<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ic_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/des_img" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_bottom">

        <android.widget.EditText
            android:id="@+id/edit_id"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@drawable/edit_background"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/hint_id"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edit_password"
            android:autofillHints="아이디" />

        <android.widget.EditText
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@drawable/edit_background"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/hint_password"
            android:gravity="center"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_id"
            android:autofillHints="비밀번호" />

        <android.widget.EditText
            android:id="@+id/edit_nick_name"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:textSize="20sp"
            android:background="@drawable/edit_background"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:text="@string/hint_nick_name"
            android:gravity="center"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_password"
            app:layout_constraintBottom_toTopOf="@id/edit_phone_number"/>


        <android.widget.EditText
            android:id="@+id/edit_phone_number"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:textSize="20sp"
            android:background="@drawable/edit_background"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:text="@string/hint_phone_number"
            android:gravity="center"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_nick_name"
            app:layout_constraintBottom_toTopOf="@id/btn_login"/>

        <android.widget.Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_style"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:text="@string/btn_sign_up"
            android:gravity="center"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_phone_number"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/txt_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_no_user"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>